# libui

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.101  Makefile.linux  README.md  cmake_install.cmake  libui  make_libft.sh  ui_test
frameworks/SDL2_image.framework/Headers/: SDL_image.h
include/: draw.h  error.h  event.h  event_flag.h  renderer.h  renderer_flag.h  shape.h  ui.h  ui_btn.h  ui_button.h  ui_draw.h  ui_error.h  ui_event.h  ui_event_flag.h  ui_frame.h  ui_image.h  ui_renderer.h  ui_shape.h  ui_struct_2d.h  ui_texture.h  ui_win.h  ui_window.h  ui_window_flag.h  window.h
includes/: ui.h  ui_button.h  ui_draw.h  ui_error.h  ui_event.h  ui_frame.h  ui_shape.h  ui_texture.h  ui_win.h
libft/: .gitignore  auteur  ft_atoi.c  ft_bzero.c  ft_itoa.c  ft_memalloc.c  ft_putstr_fd.c  ft_strdup.c  ft_strlen.c  ft_strrev.c  ft_swap.c  makefile
libft/includes/: get_next_line.h  libft.h
libft/src/: ft_2dintdel.c  ft_2dintpushback.c  ft_2dputendl.c  ft_2dputint.c  ft_2dstrdel.c  ft_2dstrlen.c  ft_2dstrpushback.c  ft_abs.c  ft_addtofloat.c  ft_atof.c  ft_atoi.c  ft_count_char.c  ft_count_words.c  ft_countnumbers.c  ft_get_pgcd.c  ft_index.c  ft_intdel.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinstr.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstsplit.c  ft_lstswap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  (+45 more)
src/: error.c  main.c  ui.c  ui_error.c  ui_init.c
src/button/: ui_button.c  ui_simple_button.c  ui_text_area.c  ui_text_entry_button.c
src/container/: button.c  frame.c
src/draw/: draw.c  draw_shape.c
src/event/: event.c  keyboard.c  mouse.c  ui_event.c  ui_keyboard.c
src/frame/: frame.c  ui_frame.c  ui_simple_frame.c
src/load_ui/: ui_check_line_name.c  ui_free_functions.c  ui_general_get.c  ui_get_b_type.c  ui_get_flags.c  ui_get_resize_type.c  ui_get_type.c  ui_load.c  ui_parse_button.c  ui_parse_buttons.c  ui_parse_frame.c  ui_parse_frame_data.c  ui_parse_simple_button.c  ui_parse_simple_frame.c  ui_parse_str.c  ui_parse_text_area.c  ui_parse_text_entry_button.c  ui_parse_text_entry_cut.c  ui_parse_texture.c  ui_parse_type.c
src/renderer/: draw.c  draw_line.c  draw_texture.c  image.c  rend_management.c  texture.c
src/shape/: ui_rect.c
src/texture/: ui_draw_one_line_return.c  ui_draw_text_line.c  ui_draw_text_line_return.c  ui_draw_text_rect.c  ui_free_texture_set.c  ui_renderer.c  ui_text.c  ui_texture.c  ui_texture_list.c
src/win/: ui.c  ui_call_button_function.c  ui_display_buttons.c  ui_display_frames.c  ui_display_simple.c  ui_display_text_area.c  ui_display_text_entry.c  ui_get_button_by_id.c  ui_get_side_rect.c  ui_mouse.c  ui_resolve_buttons_event.c  ui_resolve_text_entry_button.c  ui_set_button_function.c  ui_update_buttons.c  ui_update_buttons_texture.c  ui_update_frames.c  ui_win.c  ui_win_size.c  ui_win_update_ui.c
src/window/: win_management.c  win_position.c  win_size.c
srcs/: main.c  ui_error.c  ui_init.c
srcs/button/: ui_button.c  ui_simple_button.c  ui_text_area.c  ui_text_entry_button.c
srcs/draw/: draw.c  draw_shape.c
srcs/event/: ui_event.c
srcs/frame/: ui_frame.c  ui_simple_frame.c
srcs/load_ui/: ui_check_line_name.c  ui_general_get.c  ui_get_b_type.c  ui_get_flags.c  ui_get_type.c  ui_load.c  ui_parse_button.c  ui_parse_buttons.c  ui_parse_frame.c  ui_parse_frame_data.c  ui_parse_simple_button.c  ui_parse_simple_frame.c  ui_parse_text_area.c  ui_parse_text_entry_button.c  ui_parse_text_entry_cut.c  ui_parse_texture.c  ui_parse_type.c
srcs/shape/: ui_rect.c
srcs/texture/: ui_draw_one_line_return.c  ui_draw_text_line.c  ui_draw_text_line_return.c  ui_free_texture_set.c  ui_get_dst_y.c  ui_renderer.c  ui_text.c  ui_texture.c  ui_texture_list.c
srcs/win/: ui.c  ui_call_button_function.c  ui_check_text_entry_button.c  ui_display_buttons.c  ui_display_frames.c  ui_display_simple.c  ui_display_text_area.c  ui_display_text_entry.c  ui_get_button_by_id.c  ui_get_side_rect.c  ui_mouse.c  ui_resolve_buttons_event.c  ui_resolve_text_entry_button.c  ui_set_button_function.c  ui_update_buttons.c  ui_update_frames.c  ui_win.c  ui_win_size.c  ui_win_update_ui.c
test_ui/: ui.txt
(+5 files in other folders)
